[package]
name = "lsrs"
version = "0.1.0"
edition = "2021"
authors = ["Yurii Musolov <yurii.musolov@gmail.com>"]
description = "List information about the FILEs (the current directory by default)."

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
serde_json = "1.0.134"
